--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css">
-    <title>React App</title>
+    <title>App</title>
   </head>
   <body>
     <div id="app"></div>
